<resources>
    <string name="app_name">WYDList</string>

    <!--Ad string-->
    <string name="native_ad_express_live_small">ca-app-pub-8585047845719802/7262206779</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <!-- String set from tutorial. -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_list">Recent Posts</string>
    <string name="nav_profile">Personal Posts</string>
    <string name="nav_public">All Posts</string>
    <string name="nav_search">Search Posts</string>
    <string name="nav_feedback">Feedback</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Recent Posts</item>
        <item>Personal Posts</item>
        <item>All Posts</item>
        <item>Search Posts</item>
        <item>Feedback</item>
    </string-array>

    <string name="progress_dialog_loading">Please wait.</string>
    <string name="other">Other</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="activity_title_term_condition">Terms and Conditions</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="report_post">Report This Post</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition">Terms and Conditions</string>
    <string name="upload_new_content">Upload A New WYD Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_text">Submit</string>
    <string name="confirm_over_13">I confirm that I am over the age of 13.</string>
    <string name="birthday">What\'s your birthday?</string>
    <string name="error_over_13_only">Sorry our service is for those who are 13 years or older.</string>
    <string name="app_tagline_string">Where will your next adventure take you?</string>
    <string name="ipsum_text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="bucketlist_image_description">Image that user submits to describe the bucket list action.</string>
    <string name="bucketlist_sample_date">June 19, 2017</string>
    <string name="bucketlist_post_imin">I\'m In</string>
    <string name="bucketlist_post_comment">Discuss This</string>
    <string name="discussion_edit_text_hint">What are your thoughts?</string>
    <string name="user_info_no_name">Unknown Author</string>
    <string name="display_name_want_todo">Display Name Wants To Do</string>
    <string name="placeholder_string">Sample Data</string>
    <!-- End String set from tutorial. -->

    <string name="new_wyd_title">Title</string>
    <string name="wyd_title_hint">Please tell us what you\'d like to do.</string>
    <string name="new_tag_title">Tag</string>
    <string name="tag_hint">Include a tag to describe this item</string>
    <string name="new_photo_title">Image</string>
    <string name="photo_select_hint">OPEN CAMERA</string>
    <string name="photo_gallery_hint">OPEN GALLERY</string>
    <string name="feedback_title">Feedback</string>
    <string name="new_feedback_title">Feedback (Max 300 characters)</string>
    <string name="feedback_hint">We want to hear from you.</string>
    <string name="length_title_short_msg">A title must be at least 5 characters long.</string>
</resources>
