<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/beach"
            android:title="@string/nav_list"/>
        <item
            android:id="@+id/nav_publicfeed"
            android:icon="@drawable/hiking_trail"
            android:title="@string/nav_public"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/restaurant"
            android:title="@string/nav_search"/>
    </group>

    <item
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy"/>
            <item
                android:id="@+id/nav_term_condition"
                android:title="@string/term_condition"/>
            <item
                android:id="@+id/nav_log_off"
                android:title="@string/action_logout"/>
        </menu>
    </item>
</menu>