<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_margin="@dimen/xsmall_padding"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bucketlist_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/bucketlist_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/skydive_cove"/>

        <RelativeLayout
            android:id="@+id/transparentOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"/>

        <TextView
            android:id="@+id/bucketlist_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bucketlist_date_timestamp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/large_padding"
            android:background="@color/white_transparent"
            android:paddingEnd="@dimen/small_padding"
            android:paddingStart="@dimen/small_padding"
            android:paddingTop="@dimen/small_padding"
            android:text="@string/ipsum_text_sample"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_float_font"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bucketlist_date_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/card_footer"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/large_padding"
            android:background="@color/white_transparent"
            android:padding="@dimen/small_padding"
            android:text="@string/bucketlist_sample_date"
            android:textSize="@dimen/tiny_font"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/card_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/xsmall_padding"
                android:paddingEnd="@dimen/medium_padding"
                android:paddingStart="@dimen/medium_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/bucketlist_post_imin"
                android:textAlignment="viewEnd"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_font"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>